@@ -88,6 +88,9 @@ helloworld.java text/x-java ox
 test.cs text/x-csharp ox
 test.vala text/x-vala ox
 test.mof text/x-mof ox
+# Copied from http://bugs.freedesktop.org/show_bug.cgi?id=11530
+test-cdda.toc application/x-cdrdao-toc
+test-cdrom.toc application/x-cdrdao-toc
 
 # xml subtypes
 test.ttx application/x-font-ttx
