@@ -1,0 +1,53 @@
+CD_DA
+
+
+// Track 1
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 0 11:10:51
+
+
+// Track 2
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 11:10:51 13:36:21
+START 00:00:01
+
+
+// Track 3
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 24:46:72 10:20:74
+
+
+// Track 4
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 35:07:71 02:19:25
+START 00:02:21
+
+
+// Track 5
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 37:27:21 10:29:68
+
+
+// Track 6
+TRACK AUDIO
+NO COPY
+NO PRE_EMPHASIS
+TWO_CHANNEL_AUDIO
+FILE "/home/sa/image.iso" 47:57:14 13:52:66
+START 00:02:38
+
